--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
    <div id="main" class="container">
-       <h1>Madlibs</h1>
+       <h1>Madlibs App</h1>
        <div id="btn">
-           <h3>Choose a story</h3>
+           <h3>Please choose a story</h3>
            <button type="submit" class="btn-1" id="buttonStyle" data-story="0">Mission statement</button>
            <button type="submit" class="btn-2" id="buttonStyle" data-story="1">Lunch room</button>
            <button type="submit" class="btn-3" id="buttonStyle" data-story="2">Weather report</button>
